# async-worker

./: .gitignore  CMakeLists.txt  README.md  example_workers.cpp  example_workers.h  main.cpp  worker.cpp  worker.h  workers_manager.cpp
examples/: CMakeLists.txt  example_workers.hpp  workers_manager.cpp
include/worker/: worker.hpp
